// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteHeader Should match existing snapshot when changing the visualization via routing 1`] = `
<Header>
  <Menu
    borderless={true}
    fluid={true}
    secondary={true}
    style={
      Object {
        "maxHeight": "40px",
        "padding": "20px 0 0 0",
      }
    }
  >
    <MenuItem
      fitted="vertically"
      position="left"
    >
      <Link
        replace={false}
        to="/"
      >
        <img
          alt="hca-dynamics-icon"
          src="assets/icons/bio-blocks-icon-2x.png"
          style={
            Object {
              "height": "32px",
              "width": "32px",
            }
          }
        />
        <span
          style={
            Object {
              "color": "black",
              "fontSize": "32px",
              "fontWeight": "bold",
            }
          }
        >
          HCA Dynamics
        </span>
      </Link>
    </MenuItem>
    <Menu
      defaultActiveIndex={-1}
      secondary={true}
    >
      <MenuItem
        key="datasets"
      >
        <Link
          replace={false}
          style={
            Object {
              "color": "black",
              "fontSize": "18px",
            }
          }
          to="/datasets"
        >
          datasets
        </Link>
      </MenuItem>
      <MenuItem
        key="visualizations"
      >
        <Link
          replace={false}
          style={
            Object {
              "color": "black",
              "fontSize": "18px",
            }
          }
          to="/visualizations"
        >
          visualizations
        </Link>
      </MenuItem>
      <MenuItem
        key="vignettes"
      >
        <Link
          replace={false}
          style={
            Object {
              "color": "black",
              "fontSize": "18px",
            }
          }
          to="/vignettes"
        >
          vignettes
        </Link>
      </MenuItem>
    </Menu>
    <MenuItem
      position="right"
    >
      <Input
        icon="search"
        size="massive"
        transparent={true}
        type="text"
      />
    </MenuItem>
  </Menu>
  <Breadcrumb
    style={
      Object {
        "padding": "0 0 0 40px",
      }
    }
  >
    <BreadcrumbSection>
      <Link
        replace={false}
        to="/"
      >
        home
      </Link>
    </BreadcrumbSection>
    <BreadcrumbDivider
      icon="right angle"
    />
    <BreadcrumbSection>
      eminem-viz-id
    </BreadcrumbSection>
  </Breadcrumb>
</Header>
`;

exports[`SiteHeader Should match existing snapshot when changing the visualization via routing 2`] = `
<Header>
  <Menu
    borderless={true}
    fluid={true}
    secondary={true}
    style={
      Object {
        "maxHeight": "40px",
        "padding": "20px 0 0 0",
      }
    }
  >
    <MenuItem
      fitted="vertically"
      position="left"
    >
      <Link
        replace={false}
        to="/"
      >
        <img
          alt="hca-dynamics-icon"
          src="assets/icons/bio-blocks-icon-2x.png"
          style={
            Object {
              "height": "32px",
              "width": "32px",
            }
          }
        />
        <span
          style={
            Object {
              "color": "black",
              "fontSize": "32px",
              "fontWeight": "bold",
            }
          }
        >
          HCA Dynamics
        </span>
      </Link>
    </MenuItem>
    <Menu
      defaultActiveIndex={-1}
      secondary={true}
    >
      <MenuItem
        key="datasets"
      >
        <Link
          replace={false}
          style={
            Object {
              "color": "black",
              "fontSize": "18px",
            }
          }
          to="/datasets"
        >
          datasets
        </Link>
      </MenuItem>
      <MenuItem
        key="visualizations"
      >
        <Link
          replace={false}
          style={
            Object {
              "color": "black",
              "fontSize": "18px",
            }
          }
          to="/visualizations"
        >
          visualizations
        </Link>
      </MenuItem>
      <MenuItem
        key="vignettes"
      >
        <Link
          replace={false}
          style={
            Object {
              "color": "black",
              "fontSize": "18px",
            }
          }
          to="/vignettes"
        >
          vignettes
        </Link>
      </MenuItem>
    </Menu>
    <MenuItem
      position="right"
    >
      <Input
        icon="search"
        size="massive"
        transparent={true}
        type="text"
      />
    </MenuItem>
  </Menu>
  <Breadcrumb
    style={
      Object {
        "padding": "0 0 0 40px",
      }
    }
  >
    <BreadcrumbSection>
      <Link
        replace={false}
        to="/"
      >
        home
      </Link>
    </BreadcrumbSection>
    <BreadcrumbDivider
      icon="right angle"
    />
    <BreadcrumbSection>
      <Link
        replace={false}
        to="/datasets"
      >
        datasets
      </Link>
    </BreadcrumbSection>
    <BreadcrumbDivider
      icon="right angle"
    />
    <BreadcrumbSection>
      psycho-jukebox-vignette-id
    </BreadcrumbSection>
  </Breadcrumb>
</Header>
`;

exports[`SiteHeader Should match existing snapshot when giving required props. 1`] = `
<Header>
  <Menu
    borderless={true}
    fluid={true}
    secondary={true}
    style={
      Object {
        "maxHeight": "40px",
        "padding": "20px 0 0 0",
      }
    }
  >
    <MenuItem
      fitted="vertically"
      position="left"
    >
      <Link
        replace={false}
        to="/"
      >
        <img
          alt="hca-dynamics-icon"
          src="assets/icons/bio-blocks-icon-2x.png"
          style={
            Object {
              "height": "32px",
              "width": "32px",
            }
          }
        />
        <span
          style={
            Object {
              "color": "black",
              "fontSize": "32px",
              "fontWeight": "bold",
            }
          }
        >
          HCA Dynamics
        </span>
      </Link>
    </MenuItem>
    <Menu
      defaultActiveIndex={-1}
      secondary={true}
    >
      <MenuItem
        key="datasets"
      >
        <Link
          replace={false}
          style={
            Object {
              "color": "black",
              "fontSize": "18px",
            }
          }
          to="/datasets"
        >
          datasets
        </Link>
      </MenuItem>
      <MenuItem
        key="visualizations"
      >
        <Link
          replace={false}
          style={
            Object {
              "color": "black",
              "fontSize": "18px",
            }
          }
          to="/visualizations"
        >
          visualizations
        </Link>
      </MenuItem>
      <MenuItem
        key="vignettes"
      >
        <Link
          replace={false}
          style={
            Object {
              "color": "black",
              "fontSize": "18px",
            }
          }
          to="/vignettes"
        >
          vignettes
        </Link>
      </MenuItem>
    </Menu>
    <MenuItem
      position="right"
    >
      <Input
        icon="search"
        size="massive"
        transparent={true}
        type="text"
      />
    </MenuItem>
  </Menu>
  <Breadcrumb
    style={
      Object {
        "padding": "0 0 0 40px",
      }
    }
  >
    <BreadcrumbSection>
      <Link
        replace={false}
        to="/"
      >
        home
      </Link>
    </BreadcrumbSection>
  </Breadcrumb>
</Header>
`;
